change show style

--- a/src/app/temperatureConverter/temperatureConverter.component.html
+++ b/src/app/temperatureConverter/temperatureConverter.component.html
@@ -2,11 +2,11 @@
 
   <section class="layout-row align-items-center justify-content-between">
     <label>Celsius: </label>
-    <input type="number" class="large" data-test-id="celsius-input" [value]="celsius" onchange="converTemperature($event, 'cel')"/>
+    <input type="number" class="large" data-test-id="celsius-input" [value]="celsius" (input)="converTemperature($event, 'cel')"/>
   </section>
 
   <section class="layout-row align-items-center justify-content-between">
       <label>Fahrenheit: </label>
-      <input type="number" class="large" data-test-id="fahrenheit-input" [value]="fahrenheit" onchange="converTemperature($event, 'fah')"/>
+      <input type="number" class="large" data-test-id="fahrenheit-input" [value]="fahrenheit" (input)="converTemperature($event, 'fah')"/>
   </section>
 </div>
